--- a/js_test/index.html
+++ b/js_test/index.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Главная страница</title>
-  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
 
-<script src="js/main.js" charset="utf-8"></script>
+<script src="js\funcions.js" charset="utf-8"></script>
+<script src="js\script.js" charset="utf-8"></script>
 </body>
 </html>
