--- a/js_test/test.html
+++ b/js_test/test.html
@@ -4,16 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Главная страница</title>
+  <title>Тестовая страница</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- стили mocha для отображения результатов -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
+  <!-- библиотека mocha -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
+  <script>
+  	// включаем режим тестирования в стиле BDD
+  	mocha.setup('bdd');
+  </script>
+  <!-- добавим chai -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+  <script>
+  	// chai предоставляет большое количество функций. Объявим assert глобально
+  	const assert = chai.assert;
+  </script>
 
 </head>
 
 <body>
 
+<script src="js\funcions.js" charset="utf-8"></script>
+<script src="js\script.js" charset="utf-8"></script>
+<script src="js\test.js" charset="utf-8"></script>
 
-<script src="js/main.js" charset="utf-8"></script>
+<!-- элемент с id="mocha" будет содержать результаты тестов -->
+<div id="mocha"></div>
+
+<!-- запуск тестов -->
+<script>
+	mocha.run();
+</script>
+
 </body>
 </html>
